cluster/apps/services/baikal/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: baikal
  namespace: services
  labels:
    app.kubernetes.io/name: baikal
    app.kubernetes.io/instance: baikal
spec:
  selector:
    app.kubernetes.io/name: baikal
    app.kubernetes.io/instance: baikal
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
