cluster/apps/services/baikal/ingressRoute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-baikal
  namespace: networking
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`baikal.${SECRET_DOMAIN}`)
      kind: Rule
      # Enable auth middleware
      middlewares:
        - name: rfc1918
        - name: baikal
        # - name: basicauth
      services:
        - name: baikal
          namespace: baikal
          port: 80
  # Use the secret generated by cert-manager
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: baikal
  namespace: networking
spec:
  redirectRegex:
    regex: https://(.*)/.well-known/(card|cal)dav
    replacement: https://${1}/dav.php/
    # replacement: https://${1}/baikal/html/dav.php/
